--- a/cadastro_de_transação/cadastro_de_transacao.css
+++ b/cadastro_de_transação/cadastro_de_transacao.css
@@ -1,5 +1,13 @@
 <style>
-        body {
+        button:hover{
+            background-image:linear-gradient(45deg, #252FF1, #13BDEA, #07E818);
+            cursor: pointer;
+        }
+        select{
+            background-color: rgba(0, 0, 0, 0.9);
+            color: white;
+        }
+        body{
             background-image:linear-gradient(45deg,#07E818, #13BDEA, #252FF1 );
         }
         div{
@@ -19,20 +27,19 @@
             outline: none;
             color: white;
         }
+        textarea{
+            background-color: rgba(0, 0, 0, 0.9);
+            padding: 5px;
+            border: none;
+            outline: none;
+            color: white;
+        }
         button{
             background-image:linear-gradient(45deg,#07E818, #13BDEA, #252FF1 );
             border: none;
             padding: 5px;
             width: 100%;
             border-radius: 10px;
-            color: white;
-        }
-        button:hover{
-            background-image:linear-gradient(45deg, #252FF1, #13BDEA, #07E818);
-            cursor: pointer;
-        }
-        select{
-            background-color: rgba(0, 0, 0, 0.9);
             color: white;
         }
     </style>
