--- a/cadastro_de_transação/cadastro_de_transacao.css
+++ b/cadastro_de_transação/cadastro_de_transacao.css
@@ -6,7 +6,7 @@ textarea{
     outline: none;
     color: white;
 }
-button{
+input.btn{
     background-image:linear-gradient(45deg,#07E818, #13BDEA, #252FF1 );
     border: none;
     padding: 5px;
@@ -14,7 +14,7 @@ button{
     border-radius: 10px;
     color: white;
 }
-button:hover{
+input.btn:hover{
     background-image:linear-gradient(45deg, #252FF1, #13BDEA, #07E818);
     cursor: pointer;
 }
