--- a/tela_de_login/tela_de_login.css
+++ b/tela_de_login/tela_de_login.css
@@ -14,7 +14,7 @@
             border-radius: 15px;
             color: white;
         }
-        button{
+        input.btn{
             background-image:linear-gradient(45deg,#07E818, #13BDEA, #252FF1 );
             border: none;
             padding: 5px;
@@ -22,7 +22,7 @@
             border-radius: 10px;
             color: white;
         }
-        button:hover{
+        input.btn:hover{
             background-image:linear-gradient(45deg, #252FF1, #13BDEA, #07E818);
             cursor: pointer;
         }
