--- a/cadastro_de_transação/cadastro_de_transacao.css
+++ b/cadastro_de_transação/cadastro_de_transacao.css
@@ -32,7 +32,7 @@ select{
 body{
     background-image:linear-gradient(45deg,#07E818, #13BDEA, #252FF1 );
 }
-div{
+form{
     background-color: rgba(0, 0, 0, 0.9);
     position: absolute;
     top: 50%;
