--- a/cadastro-de-categoria/style.css
+++ b/cadastro-de-categoria/style.css
@@ -73,6 +73,7 @@ div.form {
 .textbox input {
     border: none;
     outline: none;
+    text-align: center;
     font-family: sans-serif; 
     font-size: 0.8rem;
     margin-bottom: 10px;
@@ -82,6 +83,10 @@ div.form {
     padding: 0.7rem;
     color: thistle;
     
+}
+
+#nome input {
+    display: none;
 }
 
 .textbox input[type="date"] {
