--- a/cadastro-de-categoria/style.css
+++ b/cadastro-de-categoria/style.css
@@ -1,4 +1,4 @@
-import url ('https://fonts.googleapis.com/css2? family = Poppins: ital, wght @ 1.600 & display = swap');
+@import url ('https://fonts.googleapis.com/css2? family = Poppins: ital, wght @ 1.600 & display = swap');
 
 * {
     margin: 0;
