--- a/recuperar-senha/recuperar-senha.css
+++ b/recuperar-senha/recuperar-senha.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    font-family: 
+}
+
+body {
+    
+}
+
+
 .botao-enviar {
     color: #FFF;
     font-weight: bold;
