--- a/tela_de_login/tela_de_login.css
+++ b/tela_de_login/tela_de_login.css
@@ -1,33 +1,118 @@
-input{
-    padding: 5px;
-    border: none;
-    outline: none;
+* {
+  font-family: 'Poppins', sans-serif;
 }
-div{
-    background-color: rgba(0, 0, 0, 0.9);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    padding: 50px;
-    border-radius: 15px;
-    color: white;
+
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-input.btn{
-    background-image:linear-gradient(45deg,#07E818, #13BDEA, #252FF1 );
-    border: none;
-    padding: 5px;
-    width: 100%;
-    border-radius: 10px;
-    color: white;
+
+/* Customize the label (the container) */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-weight: 200;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-input.btn:hover{
-    background-image:linear-gradient(45deg, #252FF1, #13BDEA, #07E818);
-    cursor: pointer;
+
+input[type='checkbox'] {
+  display: none;
 }
-a{
-    color:dodgerblue;
+
+input[type='checkbox'] + label {
+  background: #eee;
+  border: 1px solid #ccc;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+  padding: 0 0 0 0px;
+  border-radius: 0.25rem;
 }
-body{
-    background-image: linear-gradient(45deg, #252FF1, #13BDEA, #07E818);
+
+input[type='checkbox']:checked + label {
+  background: url(http://www.rakebacksurge.com/Styles/img/icons/tick.gif);
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+  padding: 0 0px 0 0px;
+}
+
+label {
+  margin-right: 10px;
+}
+
+input {
+  padding: 5px;
+  border: none;
+  outline: none;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  margin-bottom: -1rem;
+}
+
+div {
+  background-color: rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 50px;
+  border-radius: 15px;
+  color: white;
+}
+input.btn {
+  background-image: linear-gradient(45deg, #07e818, #13bdea, #252ff1);
+  border: none;
+  padding: 5px;
+  width: 11rem;
+  border-radius: 10px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+input.btn:hover {
+  background-image: linear-gradient(45deg, #252ff1, #13bdea, #07e818);
+  cursor: pointer;
+}
+a {
+  color: dodgerblue;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body {
+  background-image: linear-gradient(45deg, #252ff1, #13bdea, #07e818);
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+}
+
+span {
+  display: grid;
+  font-weight: 200;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: medium;
 }
